# silo-keeper

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  mise.toml
src/: backup.rs  config.rs  doctor.rs  install.rs  main.rs  state.rs  status.rs  util.rs
