[package]
name = "moat-silo"
version = "0.1.0"
edition = "2024"
description = "A small production backup reserve for PostgreSQL and S3"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
libc = "0.2"
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
toml = "0.8"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
