[package]
name = "silo-keeper"
version = "0.1.0"
edition = "2024"
authors = ["jjy <jjyruby@gmail.com>"]
description = "Encrypted PostgreSQL backups to versioned S3 with age and systemd"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jjyr/silo-keeper"
homepage = "https://github.com/jjyr/silo-keeper"
keywords = ["postgresql", "backup", "s3", "encryption", "systemd"]
categories = ["command-line-utilities", "database"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
libc = "0.2"
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
toml = "0.8"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
